--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bitcoinjs-lib": "^7.0.0-rc.0",
+    "bs58check": "^4.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ecpair": "^3.0.0-rc.0",
+    "elliptic": "^6.5.7",
     "ethers": "^6.13.3",
     "next": "14.2.14",
     "react": "^18",
@@ -20,6 +23,7 @@
     "tiny-secp256k1": "^2.2.3"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
